tests/error/result_errors/state_result_after_move.err
Error: Copy violation (at $FILE:11:23)
   | 
 9 | def main(qs: array[qubit, 3] @ owned) -> None:
10 |    ys = qs
11 |    state_result("foo", qs)
   |                        ^^ Variable `qs` with non-copyable type `array[qubit, 3]`
   |                           cannot be borrowed ...

Note:
   | 
 9 | def main(qs: array[qubit, 3] @ owned) -> None:
10 |    ys = qs
   |         -- Variable `qs` already moved here

Guppy compilation failed due to 1 previous error
